[docs] Added favicon.

--- a/Documentation/header.html
+++ b/Documentation/header.html
@@ -8,6 +8,9 @@
   
   <title>$projectname: $title</title>
 
+  <link rel="shortcut icon" href="$relpath^favicon.ico" type="image/x-icon"/>
+  <link rel="icon" href="$relpath^favicon.ico" type="image/x-icon"/>
+  
   <script type="text/javascript">
     if(window.location.protocol != 'file:') {
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
